--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx serve .",
-    "publish-release": "np ${1} --no-tests --any-branch --no-2fa --preview"
+    "publish-release": "npm --no-git-tag-version version ${1} && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md && VERSION=$(npm pkg get version | sed 's/\"//g') && git commit -m \"docs(CHANGELOG): $VERSION\" && npm --allow-same-version version $VERSION -m \"chore(release): %s\" && git push --follow-tags && conventional-github-releaser -p angular -r 0 && npm publish"
   },
   "repository": {
     "type": "git",
@@ -51,8 +51,9 @@
     }
   },
   "devDependencies": {
+    "conventional-changelog-cli": "^2.2.2",
+    "conventional-github-releaser": "^3.1.5",
     "eslint": "^8.15.0",
-    "np": "^7.6.1",
     "prettier": "^2.6.2"
   }
 }
