ci: add GH actions git user

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           # this line is required for the setup-node action to be able to run the npm publish below.
           registry-url: 'https://registry.npmjs.org'
+      - uses: fregante/setup-git-user@v1
       - run: npm ci
       - run: npm run lint
       - run: npm run publish-release ${{ inputs.version_type }}
