--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,13 +11,19 @@ on:
         required: true
         description: Version
         options:
+        - conventional
         - patch
         - minor
+        - major
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: production
+
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      CONVENTIONAL_GITHUB_RELEASER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v3
@@ -31,6 +37,6 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm run publish-release -- ${{ inputs.version_type }}
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          CONVENTIONAL_GITHUB_RELEASER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: ${{ inputs.version_type != 'conventional' }}
+      - run: npm run publish-release
+        if: ${{ inputs.version_type == 'conventional' }}
