--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -38,7 +38,4 @@ jobs:
       - uses: fregante/setup-git-user@v1
       - run: npm ci
       - run: npm run lint
-      - run: npm run publish-release -- ${{ inputs.version_type }}
-        if: ${{ inputs.version_type != 'conventional' }}
-      - run: npm run publish-release
-        if: ${{ inputs.version_type == 'conventional' }}
+      - run: npx --yes wet-run@0.2.0 release ${{ inputs.version_type }} --changelog --github-release
