--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
-      version_type:
+      version:
         type: choice
         required: true
         description: Version
@@ -15,11 +15,23 @@ on:
         - patch
         - minor
         - major
+        - prerelease
+      pre_release:
+        type: choice
+        required: false
+        description: Pre-release
+        options:
+        -
+        - canary
+        - beta
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: production
+    permissions:
+      contents: write
+      id-token: write
 
     env:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -38,4 +50,4 @@ jobs:
       - uses: fregante/setup-git-user@v1
       - run: npm ci
       - run: npm run lint
-      - run: npx --yes wet-run@0.2.0 release ${{ inputs.version_type }} --changelog --github-release
+      - run: npx --yes wet-run@0.4.0 release ${{ inputs.version }} --pre-release "${{ inputs.pre_release }}" --provenance --changelog --github-release
