feat!: Remote playback API (#16)
* feat!: use regular custom element i/o built-in
https://github.com/WebKit/standards-positions/issues/97

* chore: update readme

* fix: add utils and simplify

* fix: improve cast callback to media, fix mem leak

* feat: implement remote playback API

* chore: update docs & example

* chore: add wet-run w/ canary support

* fix: add missing NPM files

* chore: update GH workflow

* fix: race conditions

* chore: upgrade wet-run

* fix: use WeakSet to keep weak ref to cast element

* feat: add castOptions and cast-receiver attr

* chore: upgrade deps

* chore: remove unneeded CD script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Cast your video element to the big screen with ease!",
   "type": "module",
   "main": "castable-video.js",
-  "files": [],
+  "files": [
+    "castable-mixin.js",
+    "castable-remote-playback.js",
+    "castable-utils.js"
+  ],
   "scripts": {
     "lint": "npx eslint *.js -c ./node_modules/wet-run/.eslintrc.json",
     "test": "wet run",
@@ -20,8 +24,11 @@
     "url": "https://github.com/muxinc/castable-video/issues"
   },
   "homepage": "https://github.com/muxinc/castable-video#readme",
+  "dependencies": {
+    "custom-media-element": "^1.0.0"
+  },
   "devDependencies": {
-    "wet-run": "^0.2.0"
+    "wet-run": "^0.5.1"
   },
   "keywords": [
     "chromecast",
