fix: add mixin type

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "castable-video.js",
   "files": [
+    "castable-mixin.d.ts",
     "castable-mixin.js",
     "castable-remote-playback.js",
     "castable-utils.js"
