--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/muxinc/castable-video#readme",
   "dependencies": {
-    "custom-media-element": "^1.1.0"
+    "custom-media-element": "~1.1.3"
   },
   "devDependencies": {
     "wet-run": "^0.9.3"
