--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "lint": "npx eslint *.js -c ./node_modules/wet-run/.eslintrc.json",
-    "test": "wet run",
+    "test": "wet test",
     "dev": "wet serve"
   },
   "repository": {
@@ -26,10 +26,10 @@
   },
   "homepage": "https://github.com/muxinc/castable-video#readme",
   "dependencies": {
-    "custom-media-element": "~1.1.3"
+    "custom-media-element": "~1.2.2"
   },
   "devDependencies": {
-    "wet-run": "^0.9.3"
+    "wet-run": "^1.0.1"
   },
   "keywords": [
     "chromecast",
